*xff_handler introduced for handling XFF proxy chains
*extract_mcc introduced for extracing MCC codes from X-Analytics headers
*project_extractor introduced for extracting projects (language_code.project) from Wikimedia URLs.
*Better test coverage
*Tweaks to log_sieve for a slightly more refined definition.
*hive_range() and rpy deprecated and removed.

Version 1.5.0
-------------------------------------------------------------------------
*parse_uuid() now included to parse the UUIDs the Wikipedia Apps include in their URLs.
*Various documentation improvements.
*check added to intertimes() to elegantly handle length-1 vectors of timestamps.
*host_handler() extracts hosts from referer and other URLs.
*wiki_crawler() checks for the presence of Wikimedia-specific crawlers.
*mysql_*() functions now use the centralised config file at /etc/mysql/conf.d/analytics-research-client.cnf for usernames and passwords.
*hive_query() now used RJDBC.

Version 1.4.0
-------------------------------------------------------------------------
*hive_query documentation now includes pointers to Wikitech docs around Hadoop/Hive/HDFS generally.
*log_strptime and mw_strptime now have functions that operate in the other direction, as to_log and to_mw.
*extraneous call in geo_netspeed.py removed.
*hive_range() added, to automatically compute a valid WHERE clause for partitioning over years/months/days.
*device_classifier() added to enable device classification; devices.RData added as the underlying data source.
*Full unit tests for timestamp and session handling.

Version 1.3.0
-------------------------------------------------------------------------
*"python3" option added to rpy
*Documentation around session analysis added to the main vignette.
*log_strptime now sanitises strings >19 characters long, rather than >23
*mw_strptime now sanitises strings >14 characters long, rather than >30